--- a/.github/workflows/mac And html5.yml
+++ b/.github/workflows/mac And html5.yml
@@ -47,7 +47,7 @@ jobs:
           haxelib install hxcpp-debug-server
           haxelib git extension-webm https://github.com/KadeDev/extension-webm
           haxelib run lime rebuild extension-webm mac
-          haxelib install polymod
+          haxelib git polymod https://github.com/ThatDisabledKid/old-polymod
           haxelib install newgrounds
           haxelib git faxe https://github.com/uhrobots/faxe
           haxelib install linc_luajit
@@ -94,7 +94,7 @@ jobs:
           haxelib install hxcpp-debug-server
           haxelib git extension-webm https://github.com/KadeDev/extension-webm
           haxelib run lime rebuild extension-webm windows
-          haxelib install polymod
+          haxelib git polymod https://github.com/ThatDisabledKid/old-polymod
           haxelib install newgrounds
           haxelib git faxe https://github.com/uhrobots/faxe
           haxelib install linc_luajit
